--- a/app/views/welcome/best.html.erb
+++ b/app/views/welcome/best.html.erb
@@ -15,7 +15,7 @@
 					<tbody>
 						<% @months.take(8).each do |month| %>
 						<tr>
-							<td><%= link_to month[:year] do %><%= month[:year].year %><% end %> - <%= Date::MONTHNAMES[month[:month]] %></td>
+							<td><%= link_to month[:year] do %><%= month[:year].year %><% end %> - <%= Date::MONTHNAMES[month[:month]] %><% if Time.current.year == month[:year].year and Time.current.month == month[:month] %> *<% end %></td>
 							<td class="currency text-right"><%= number_to_currency(month[:income], { :negative_format => '(%n)' }) %></td>
 						</tr>
 						<% end %>
@@ -25,15 +25,15 @@
 				<table class="table table-hover table-striped">
 					<thead>
 						<tr>
-							<th>Quarter</th>
-							<th class="text-right">Per Month</th>
+							<th width="40%">Quarter</th>
+							<th class="text-right">Per Month Average</th>
 							<th class="text-right">Total Income</th>
 						</tr>
 					</thead>
 					<tbody>
 						<% @quarters.take(8).each do |quarter| %>
 						<tr>
-							<td><%= link_to quarter[:year] do %><%= quarter[:year].year %><% end %> - Q<%= quarter[:quarter] %></td>
+							<td><%= link_to quarter[:year] do %><%= quarter[:year].year %><% end %> - Q<%= quarter[:quarter] %><% if Time.current.year == quarter[:year].year and quarter[:quarter] == (1 + ((Time.current.month - 1) / 3).to_i) %> *<% end %></td>
 							<td class="currency text-right"><%= number_to_currency(quarter[:income] / 3, { :negative_format => '(%n)' }) %></td>
 							<td class="currency text-right"><%= number_to_currency(quarter[:income], { :negative_format => '(%n)' }) %></td>
 						</tr>
@@ -44,15 +44,15 @@
 				<table class="table table-hover table-striped">
 					<thead>
 						<tr>
-							<th>Year</th>
-							<th class="text-right">Per Month</th>
+							<th width="40%">Year</th>
+							<th class="text-right">Per Month Average</th>
 							<th class="text-right">Total Income</th>
 						</tr>
 					</thead>
 					<tbody>
 						<% Year.all.sort_by(&:incomeTotal).reverse.take(4).each do |year| %>
 						<tr>
-							<td><%= link_to year do %><%= year.year %><% end %></td>
+							<td><%= link_to year do %><%= year.year %><% end %><% if Time.current.year == year.year %> *<% end %></td>
 							<td class="currency text-right"><%= number_to_currency(year.incomeTotal / 12, { :negative_format => '(%n)' }) %></td>
 							<td class="currency text-right"><%= number_to_currency(year.incomeTotal, { :negative_format => '(%n)' }) %></td>
 						</tr>
